2012-11-08 John Wu <John dot Wu at ACM dot org>
	* src/bitvector.h, src/bitvector.cpp: add function
	bitvector::operator<
	* src/bitvector.cpp:895 move casting operator inside the
	parenthesis to correct a problem with converting -1 to a large
	positive number (which leads to a very long delay in the function
	bitvector::erase)

2012-11-02 John Wu <John dot Wu at ACM dot org>
	* src: replace compiler macros linux with __linux__, sun with
	__sun, and unix with __unix__ to conform to the C standard
	requirement on machine specific predefined macros (based on a
	report from Hari Krishnan)
	* src/capi.h, examples/tcapi.c, java/FastBit.c: change C++
	comments to C-style comments (to compile with gcc -ansi)

2012-10-29 John Wu <John dot Wu at ACM dot org>
	* src/bord.h: expand functions copyValue, column::equal_to,
	column::less_than and column::append to handle string values (to
	address a problem raised by Andrew Olson)

2012-10-28 John Wu <John dot Wu at ACM dot org>
	* configure.ac: use /usr/libexec/java_home to determine the home
	directory of java when it is present (to enable the option
	--with-java to locate the latest version of java through
	java_home)
	* tests/scripts/fastbit-config.in: add PTHREAD_CFLAGS to CFLAGS

2012-10-27 John Wu <John dot Wu at ACM dot org>
	* src/category.cpp: in category::prepareMembers, read the
	dictionary first before doing anything else

2012-10-26 John Wu <John dot Wu at ACM dot org>
	* src/category.cpp: category::selectStrings to work with columns
	with only a single string value (to address a problem reported by
	Andrew Olson)
	* src/bordm.cpp:4648 change k21.type() to be k12.type()

2012-10-22 John Wu <John dot Wu at ACM dot org>
	* src/part.cpp: investigating why FastQuery complains about
	missing versions of estimateCost
	* runconfig: modify the command for hopper to use PGI compilers
	(in order to work with ADIOS software)

2012-10-19 John Wu <John dot Wu at ACM dot org>